[gd_scene load_steps=7 format=3 uid="uid://2of3o36sd6rq"]

[ext_resource type="Script" path="res://Game Components/Inventory/inventory_GUI.gd" id="1_8i475"]
[ext_resource type="PackedScene" uid="uid://bggg174d0g1dl" path="res://Game Components/Inventory/slot_gui.tscn" id="2_p73rp"]
[ext_resource type="FontFile" uid="uid://du58gfnyy5wpj" path="res://Game Components/fonts/Silver.ttf" id="3_k1v68"]
[ext_resource type="Texture2D" uid="uid://d1t4je0end326" path="res://Game Components/UI_Elements/prompts/tile_0306.png" id="3_rc6tg"]
[ext_resource type="LabelSettings" uid="uid://rpr4y5q5ktko" path="res://char_info.tres" id="4_5qyxi"]
[ext_resource type="Texture2D" uid="uid://c8oyx3v0etlc8" path="res://Game Components/UI_Elements/prompts/tile_0307.png" id="6_1smh8"]

[node name="inventory" type="Control"]
light_mask = 0
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 180.0
script = ExtResource("1_8i475")

[node name="grid" type="GridContainer" parent="."]
layout_mode = 1
offset_right = 248.0
offset_bottom = 104.0
columns = 4

[node name="Slot1" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
layout_mode = 2
focus_neighbor_right = NodePath("../Slot2")
focus_neighbor_bottom = NodePath("../Slot5")

[node name="Slot2" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
layout_mode = 2
focus_neighbor_left = NodePath("../Slot1")
focus_neighbor_right = NodePath("../Slot3")
focus_neighbor_bottom = NodePath("../Slot6")

[node name="Slot3" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
layout_mode = 2
focus_neighbor_left = NodePath("../Slot2")
focus_neighbor_right = NodePath("../Slot4")
focus_neighbor_bottom = NodePath("../Slot7")

[node name="Slot4" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
layout_mode = 2
focus_neighbor_left = NodePath("../Slot3")
focus_neighbor_bottom = NodePath("../Slot8")

[node name="Slot5" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
layout_mode = 2
focus_neighbor_top = NodePath("../Slot1")
focus_neighbor_right = NodePath("../Slot6")
focus_neighbor_bottom = NodePath("../Slot9")

[node name="Slot6" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
layout_mode = 2
focus_neighbor_left = NodePath("../Slot5")
focus_neighbor_top = NodePath("../Slot2")
focus_neighbor_right = NodePath("../Slot7")
focus_neighbor_bottom = NodePath("../Slot10")

[node name="Slot7" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
layout_mode = 2

[node name="Slot8" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
layout_mode = 2

[node name="Slot9" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
layout_mode = 2

[node name="Slot10" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
layout_mode = 2

[node name="Slot11" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
layout_mode = 2

[node name="Slot12" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
layout_mode = 2

[node name="Slot13" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
visible = false
layout_mode = 2

[node name="Slot14" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
visible = false
layout_mode = 2

[node name="Slot15" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
visible = false
layout_mode = 2

[node name="Slot16" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
visible = false
layout_mode = 2

[node name="Slot17" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
visible = false
layout_mode = 2

[node name="Slot18" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
visible = false
layout_mode = 2

[node name="Slot19" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
visible = false
layout_mode = 2

[node name="Slot20" parent="grid" groups=["empty_slots", "slots"] instance=ExtResource("2_p73rp")]
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = -2
layout_mode = 0
offset_left = 16.0
offset_top = 74.0
offset_right = 244.0
offset_bottom = 310.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 120.0
offset_right = 71.0
offset_bottom = 166.0

[node name="use_container" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/use_container"]
layout_mode = 2
texture = ExtResource("3_rc6tg")
stretch_mode = 2

[node name="use_instruct" type="Label" parent="VBoxContainer/use_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_k1v68")
theme_override_font_sizes/font_size = 19
text = "E: Drop Item"
label_settings = ExtResource("4_5qyxi")

[node name="drop_container" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/drop_container"]
layout_mode = 2
texture = ExtResource("6_1smh8")
stretch_mode = 2

[node name="drop_instruct" type="Label" parent="VBoxContainer/drop_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_k1v68")
theme_override_font_sizes/font_size = 19
text = "Q: Use Item"
label_settings = ExtResource("4_5qyxi")

[connection signal="item_used" from="grid/Slot1" to="." method="_on_slot_1_item_used"]
[connection signal="item_used" from="grid/Slot2" to="." method="_on_slot_2_item_used"]
[connection signal="item_used" from="grid/Slot3" to="." method="_on_slot_3_item_used"]
[connection signal="item_used" from="grid/Slot4" to="." method="_on_slot_4_item_used"]
[connection signal="item_used" from="grid/Slot5" to="." method="_on_slot_5_item_used"]
[connection signal="item_used" from="grid/Slot6" to="." method="_on_slot_6_item_used"]
[connection signal="item_used" from="grid/Slot7" to="." method="_on_slot_7_item_used"]
[connection signal="item_used" from="grid/Slot8" to="." method="_on_slot_8_item_used"]
[connection signal="item_used" from="grid/Slot9" to="." method="_on_slot_9_item_used"]
[connection signal="item_used" from="grid/Slot10" to="." method="_on_slot_10_item_used"]
[connection signal="item_used" from="grid/Slot11" to="." method="_on_slot_11_item_used"]
[connection signal="item_used" from="grid/Slot12" to="." method="_on_slot_12_item_used"]
[connection signal="item_used" from="grid/Slot13" to="." method="_on_slot_13_item_used"]
[connection signal="item_used" from="grid/Slot14" to="." method="_on_slot_14_item_used"]
[connection signal="item_used" from="grid/Slot15" to="." method="_on_slot_15_item_used"]
[connection signal="item_used" from="grid/Slot16" to="." method="_on_slot_16_item_used"]
[connection signal="item_used" from="grid/Slot17" to="." method="_on_slot_17_item_used"]
[connection signal="item_used" from="grid/Slot18" to="." method="_on_slot_18_item_used"]
[connection signal="item_used" from="grid/Slot19" to="." method="_on_slot_19_item_used"]
[connection signal="item_used" from="grid/Slot20" to="." method="_on_slot_20_item_used"]
